; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_mcs.c_mcs_recv_connect_response.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_mcs.c_mcs_recv_connect_response.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@False = common dso_local global i32 0, align 4
@MCS_CONNECT_RESPONSE = common dso_local global i32 0, align 4
@BER_TAG_RESULT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"MCS connect: %d\0A\00", align 1
@BER_TAG_INTEGER = common dso_local global i32 0, align 4
@BER_TAG_OCTET_STRING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @mcs_recv_connect_response to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mcs_recv_connect_response(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32* @iso_recv(i32* %9, i32* null)
  store i32* %10, i32** %8, align 8
  %11 = load i32*, i32** %8, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* @False, align 4
  store i32 %14, i32* %3, align 4
  br label %48

15:                                               ; preds = %2
  %16 = load i32*, i32** %8, align 8
  %17 = load i32, i32* @MCS_CONNECT_RESPONSE, align 4
  %18 = call i32 @ber_parse_header(i32* %16, i32 %17, i32* %7)
  %19 = load i32*, i32** %8, align 8
  %20 = load i32, i32* @BER_TAG_RESULT, align 4
  %21 = call i32 @ber_parse_header(i32* %19, i32 %20, i32* %7)
  %22 = load i32*, i32** %8, align 8
  %23 = load i64, i64* %6, align 8
  %24 = call i32 @in_uint8(i32* %22, i64 %23)
  %25 = load i64, i64* %6, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %31

27:                                               ; preds = %15
  %28 = load i64, i64* %6, align 8
  %29 = call i32 @error(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i64 %28)
  %30 = load i32, i32* @False, align 4
  store i32 %30, i32* %3, align 4
  br label %48

31:                                               ; preds = %15
  %32 = load i32*, i32** %8, align 8
  %33 = load i32, i32* @BER_TAG_INTEGER, align 4
  %34 = call i32 @ber_parse_header(i32* %32, i32 %33, i32* %7)
  %35 = load i32*, i32** %8, align 8
  %36 = load i32, i32* %7, align 4
  %37 = call i32 @in_uint8s(i32* %35, i32 %36)
  %38 = load i32*, i32** %8, align 8
  %39 = call i32 @mcs_parse_domain_params(i32* %38)
  %40 = load i32*, i32** %8, align 8
  %41 = load i32, i32* @BER_TAG_OCTET_STRING, align 4
  %42 = call i32 @ber_parse_header(i32* %40, i32 %41, i32* %7)
  %43 = load i32*, i32** %4, align 8
  %44 = load i32*, i32** %8, align 8
  %45 = call i32 @sec_process_mcs_data(i32* %43, i32* %44)
  %46 = load i32*, i32** %8, align 8
  %47 = call i32 @s_check_end(i32* %46)
  store i32 %47, i32* %3, align 4
  br label %48

48:                                               ; preds = %31, %27, %13
  %49 = load i32, i32* %3, align 4
  ret i32 %49
}

declare dso_local i32* @iso_recv(i32*, i32*) #1

declare dso_local i32 @ber_parse_header(i32*, i32, i32*) #1

declare dso_local i32 @in_uint8(i32*, i64) #1

declare dso_local i32 @error(i8*, i64) #1

declare dso_local i32 @in_uint8s(i32*, i32) #1

declare dso_local i32 @mcs_parse_domain_params(i32*) #1

declare dso_local i32 @sec_process_mcs_data(i32*, i32*) #1

declare dso_local i32 @s_check_end(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
